Implemented manual configuring of player types in configuration file.

--- a/AppConfigValues.ini
+++ b/AppConfigValues.ini
@@ -3,3 +3,12 @@
 
 // There is assumed that board is a square.
 const int BoardSize = 19;
+
+// Acceptable values:
+// 1 - human player,
+// 2 - bot randomizer,
+// 3 - bot CM,
+// 4 - bot PB.
+// It could be the same value for both constants.
+const int PlayerWhite = 1;
+const int PlayerBlack = 2;
