--- a/AppConfigValues.ini
+++ b/AppConfigValues.ini
@@ -7,10 +7,10 @@ const int BoardSize = 19;
 const int PawnsLineLenghtToWin = 5;
 
 // Acceptable values:
-// 1 - human player,
-// 2 - bot randomizer,
-// 3 - bot CM,
-// 4 - bot PB.
+// 1 - human player (console control)
+// 2 - bot randomizer
+// 3 - bot CM
+// 4 - bot PB
 // It could be the same value for both constants.
 const int PlayerWhite = 2;
 const int PlayerBlack = 2;
