Implemented battle finishing when opponent's turn took too much time.

--- a/AppConfigValues.ini
+++ b/AppConfigValues.ini
@@ -19,3 +19,6 @@ const int PlayerBlack = 2;
 // after each player's movement. This value is used only none of players is console
 // (human) player.
 const bool EnterPressedNeededToMakeNextMove = false;
+
+// Time is expressed in microseconds.
+const int PlayerTurnMaxTime = 500000; // 0,5s
