Added functionality of disabling maximum time for all player turns in config file and implemented no time limit for human console player turns even if turn time limit is set in config file.

--- a/AppConfigValues.ini
+++ b/AppConfigValues.ini
@@ -20,5 +20,8 @@ const int PlayerBlack = 2;
 // (human) player.
 const bool EnterPressedNeededToMakeNextMove = false;
 
-// Time is expressed in microseconds.
-const int PlayerTurnMaxTime = 500000; // 0,5s
+// Time is expressed in microseconds. This limit is not applied to human console player.
+// Value 0 means that there is no time limit for player turn.
+const int PlayerTurnMaxTime = 0; // No limit.
+//const int PlayerTurnMaxTime = 500000; // 0,5s
+
