--- a/AppConfigValues.ini
+++ b/AppConfigValues.ini
@@ -10,7 +10,7 @@ const int PawnsLineLenghtToWin = 5;
 // 1 - human player (console control)
 // 2 - bot randomizer
 // 3 - bot CM
-// 4 - bot PB
+// 4 - BatoBot
 // It could be the same value for both constants.
 const int PlayerWhite = 2;
 const int PlayerBlack = 2;
