Add user controller player (via any view)

--- a/AppConfigValues.ini
+++ b/AppConfigValues.ini
@@ -8,9 +8,10 @@ const int PawnsLineLenghtToWin = 5;
 
 // Acceptable values:
 // 1 - human player (console control)
-// 2 - bot randomizer
-// 3 - bot CM
-// 4 - BatoBot
+// 2 - human player (control by any attached view)
+// 3 - bot randomizer
+// 4 - bot CM
+// 5 - BatoBot
 // It could be the same value for both constants.
 const int PlayerWhite = 2;
 const int PlayerBlack = 2;
