Implemented preliminary version of BotCM offensive strategy improvements.

--- a/AppConfigValues.ini
+++ b/AppConfigValues.ini
@@ -2,7 +2,8 @@
 // in this file, as in file with constant declarations ('AppConfigDefinitions.h').
 
 // There is assumed that board is a square.
-const int BoardSize = 19;
+//const int BoardSize = 19;
+const int BoardSize = 25;
 
 const int PawnsLineLenghtToWin = 5;
 
