Implemented gameplay file management for battle saving and loading, for debugging purposes.

--- a/AppConfigValues.ini
+++ b/AppConfigValues.ini
@@ -27,3 +27,9 @@ const bool EnterPressedNeededToMakeNextMove = false;
 const int PlayerTurnMaxTime = 0; // No limit.
 //const int PlayerTurnMaxTime = 500000; // 0,5s
 
+// Supported values:
+// 0 - no file management,
+// 1 - gameplay is saved to a file during the game,
+// 2 - gameplay is loaded from a file during the game (however bot players movements are
+// evaluated rather than loaded from the file).
+const int GameplayFileManagementMode = 0;
